# comp_easy

./: .gitignore  CMakeLists.txt  http2_metrics.csv  monitor.sh  real_example.c
cmake/: curl.cmake
dependency/prefix/include/wolfssl/: options.h
dependency/prefix/lib/: libcurl.la  libcurl.so.4.8.0  libnghttp2.la  libnghttp2.so.14.28.4  libnghttp3.la  libnghttp3.so.9.3.0  libngtcp2.la  libngtcp2.so.16.2.2  libngtcp2_crypto_wolfssl.la  libngtcp2_crypto_wolfssl.so.5.1.1  libwolfssl.la  libwolfssl.so.44.0.0
dependency/prefix/lib/pkgconfig/: libcurl.pc  libnghttp2.pc  libnghttp3.pc  libngtcp2.pc  libngtcp2_crypto_wolfssl.pc  wolfssl.pc
dependency/prefix/share/man/man1/: curl-config.1  curl.1  wcurl.1
dependency/prefix/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_APPCONNECT_TIME.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CAINFO.3  CURLINFO_CAPATH.3  CURLINFO_CERTINFO.3  CURLINFO_CONDITION_UNMET.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONNECT_TIME_T.3  CURLINFO_CONN_ID.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD_T.3  CURLINFO_CONTENT_TYPE.3  CURLINFO_COOKIELIST.3  CURLINFO_EARLYDATA_SENT_T.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_FILETIME.3  CURLINFO_FILETIME_T.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_HEADER_SIZE.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_HTTPAUTH_USED.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_HTTP_VERSION.3  CURLINFO_LASTSOCKET.3  CURLINFO_LOCAL_IP.3  CURLINFO_LOCAL_PORT.3  CURLINFO_NAMELOOKUP_TIME.3  CURLINFO_NAMELOOKUP_TIME_T.3  CURLINFO_NUM_CONNECTS.3  CURLINFO_OS_ERRNO.3  (+473 more)
include/proto_comp/: abr.h  buffer.h  bw_estimator.h  define.h  http.h  http_pool.h  request_handler.h  request_handler_v2.h  tile_selection.h  viewport_prediction.h
ril_data/: http3_metrics.csv
src/: abr.c  buffer.c  bw_estimator.c  http.c  http_pool.c  request_handler.c  request_handler_v2.c  tile_selection.c  viewport_prediction.c
